2005-09-16  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/reftex-auc.el:
	* textmodes/reftex-cite.el:
	* textmodes/reftex-dcr.el:
	* textmodes/reftex-global.el:
	* textmodes/reftex-parse.el:
	* textmodes/reftex-ref.el:
	* textmodes/reftex-sel.el:
	* textmodes/reftex-toc.el:
	* textmodes/reftex-vars.el:
	* textmodes/reftex.el: Small changes to remove compiler warnings.

	* textmodes/reftex-index.el: Likewise.
	(reftex-query-index-phrase): More efficient use of markers.

2005-09-15  Chong Yidong  <cyd@stupidchicken.com>

	* image.el (image-load-path): New variable.
	(image-search-load-path): New function.
	(find-image): Search for images in `image-load-path'.

2005-09-15  David Ponce  <david@dponce.com>

	* recentf.el (recentf-save-file-modes): New option.
	(recentf-save-list): Use it.

2005-09-15  Nick Roberts  <nickrob@snap.net.nz>

	* bindings.el (mode-line-eol-desc, mode-line-coding-system-map)
	(mode-line-mule-info, mode-line-modified): Move bindings from
	mouse-3 to mouse-1.

2005-09-15  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (sendmail-user-agent-compose): Revert last change.

2005-09-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/ange-ftp.el (ange-ftp-process-filter): Revert to ^#+$.
	Use with-current-buffer.
	(ange-ftp-gwp-start): Remove unused var `gw-user'.
	(ange-ftp-guess-hash-mark-size): Remove unused var `result'.
	(ange-ftp-insert-directory): Remove unused var `short'.
	(ange-ftp-file-name-sans-versions): Remove unused var `host-type'.

	* pcvs-defs.el (cvs-version): Recognize CVSNT version string.
	(cvs-execute-single-dir): Change default: cvs-1.9 is ancient.

	* calendar/cal-menu.el: Don't require easymenu, since we don't use it.
	(check-calendar-holidays, diary-list-entries): Autoload.
	Otherwise `emacs -q' followed by "mouse-2 -> diary entries" burps.
	(calendar-mouse-holidays, calendar-mouse-view-diary-entries): Simplify.

	* calendar/diary-lib.el (diary-show-all-entries): Fix last change,