@@ -1,3 +1,8 @@
+2005-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* calendar/diary-lib.el (mark-diary-entries): Don't move point.
+	Use with-syntax-table and dolist.
+
 2005-09-16  Carsten Dominik  <dominik@science.uva.nl>
 
 	* textmodes/reftex-auc.el:
